@@ -284,6 +284,21 @@ class Horde_Core_Ui_VarRenderer_Nag extends Horde_Core_Ui_VarRenderer_Html
             Horde::label('recur_week_of_month_interval', _("month(s)") . ' ' . _("on the same weekday"))
         );
 
+        /* Monthly on same last weekday. */
+        $on = $recur && $recur->hasRecurType(Horde_Date_Recurrence::RECUR_MONTHLY_LAST_WEEKDAY);
+        $html .= sprintf(
+            '<input id="recurmonthlastweek" type="radio" class="checkbox" name="recurrence" value="%d"%s />
+<label id="recurmonthlastweek_label" for="recurmonthlastweek">%s</label>
+<input type="text" id="recur_last_week_of_month_interval" name="recur_last_week_of_month_interval" size="2" value="%d" />
+%s
+<br />',
+            Horde_Date_Recurrence::RECUR_MONTHLY_LAST_WEEKDAY,
+            $on ? ' checked="checked"' : '',
+            _("Monthly: Recurs every"),
+            $on ? $recur->getRecurInterval() : '',
+            Horde::label('recur_last_week_of_month_interval', _("month(s)") . ' ' . _("on the same last weekday"))
+        );
+
         /* Yearly on same date. */
         $on = $recur && $recur->hasRecurType(Horde_Date_Recurrence::RECUR_YEARLY_DATE);
         $html .= sprintf(
