@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Add support for monthly recurrence on last weekday.
 * [jan] Keep original file names when PUTing tasks via WebDAV.
 * [mjr] Add an "actual" field for tracking actual time spent.
 * [mjr] Add support for task organizer and iTip functionality.
@@ -609,7 +610,7 @@
    <package>
     <name>Horde_Date</name>
     <channel>pear.horde.org</channel>
-    <min>2.0.0</min>
+    <min>2.1.0</min>
     <max>3.0.0alpha1</max>
     <exclude>3.0.0alpha1</exclude>
    </package>
@@ -1650,6 +1651,7 @@
    <date>2015-02-27</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Add support for monthly recurrence on last weekday.
 * [jan] Keep original file names when PUTing tasks via WebDAV.
 * [mjr] Add an "actual" field for tracking actual time spent.
 * [mjr] Add support for task organizer and iTip functionality.
